--- a/src/app/certifications-list/certifications-list.component.html
+++ b/src/app/certifications-list/certifications-list.component.html
@@ -6,8 +6,9 @@
                 {{ certification.name }}
                 <button (click)="showDetail(certification.id)">Details</button>
                 <app-alert-certif style="display: inline-block; margin-left: 15px;" [certification]="certification" (notify)="onNotify()"></app-alert-certif>
-                <app-detail-certif   [certification]="certification" *ngIf ="showElement == certification.id"></app-detail-certif>
-               
+                <!-- <app-detail-certif   [certification]="certification" *ngIf ="showElement == certification.id">           
+                </app-detail-certif>--> 
+                 <a [title]="certification.name+' detail'" [routerLink]="['/certifications/detail/', certification.id]">Plus détail</a>
                 
             </li>
         </ul>
